<resources>
    <string name="app_name">Simple Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <string name="username">username</string>
    <string name="description">description</string>
    <string name="example_question">Nilai x yang memenuhi persamaan x^2 + 3x − 4 = 6</string>
    <string name="ans1">2 dan -5</string>
    <string name="ans2">hanya 2</string>
    <string name="ans3">6 dan 3</string>
    <string name="ans4">2 dan 6</string>
</resources>
